[project]
name = "hw1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.5.1",
    "orders-server",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
    "httpx>=0.27",
    "ratelimit>=2.2",
    "aiolimiter>=1.1",
    "aiofiles>=23.0",
]

[tool.uv.sources]
orders-server = { path = "orders_server-0.1.0-py3-none-any.whl" }
